welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: missing arguments for method | in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		if (Math.abs(n-k)==100 | Math.abs(n+k)=100)
                                       ^nearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
	for ( k <- 1 to 10){
                ^